--- a/.github/workflows/check-go-lint.yml
+++ b/.github/workflows/check-go-lint.yml
@@ -1,9 +1,7 @@
 name: Check Go lint
 
-on:
-  pull_request:
-    paths:
-      - '**/*.go'
+on: push
+
 jobs:
   go-lint:
     runs-on: ubuntu-latest
