--- a/packages/tokamak/contracts-bedrock/package.json
+++ b/packages/tokamak/contracts-bedrock/package.json
@@ -56,10 +56,15 @@
     "lint": "pnpm lint:fix && pnpm lint:check"
   },
   "devDependencies": {
+    "@eth-optimism/contracts-bedrock": "workspace:*",
+    "@nomicfoundation/hardhat-verify": "^2.0.7",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
+    "ethers": "^5.7.2",
+    "hardhat": "2.22.3",
     "tsx": "^3.14.0",
-    "typescript": "^5.2.2",
-    "@eth-optimism/contracts-bedrock": "workspace:*"
+    "typescript": "^5.2.2"
   }
 }
