[OR-1597] test thanos repo for ecotone

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -104,7 +104,7 @@ jobs:
           DEPLOYMENT_CONTEXT=devnetL1 make devnet-allocs
 
       - name: Run ws e2e test
-        run: OP_TESTLOG_DISABLE_COLOR=true OP_E2E_DISABLE_PARALLEL=false gotestsum --format=standard-verbose -- -timeout=25m -parallel=16 ./...
+        run: OP_TESTLOG_DISABLE_COLOR=true OP_E2E_CANNON_ENABLED=false OP_E2E_USE_FPAC=false OP_E2E_DISABLE_PARALLEL=false  gotestsum --format=standard-verbose -- -timeout=25m -parallel=16 -failfast ./...
         working-directory: op-e2e
 
   stop-runner-ws:
@@ -127,111 +127,3 @@ jobs:
           github-token: ${{ secrets.ACCESS_TOKEN }}
           label: ${{ needs.start-runner-ws.outputs.label }}
           ec2-instance-id: ${{ needs.start-runner-ws.outputs.ec2-instance-id }}
-
-  start-runner-http:
-    name: Start EC2 Runner for http tests
-    runs-on: ubuntu-latest
-    outputs:
-      label: ${{ steps.start-ec2-runner.outputs.label }}
-      ec2-instance-id: ${{ steps.start-ec2-runner.outputs.ec2-instance-id }}
-    steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-northeast-2
-
-      - name: Start EC2 runner
-        id: start-ec2-runner
-        uses: machulav/ec2-github-runner@v2
-        with:
-          mode: start
-          github-token: ${{ secrets.ACCESS_TOKEN }}
-          ec2-image-id: ami-0ceeb1418a9676af7
-          ec2-instance-type: c7g.4xlarge
-          subnet-id: subnet-04958ddab1cb88c55
-          security-group-id: sg-031082ccee7540e7a
-          iam-role-name: ec2-runner
-          pre-runner-script: shutdown -P +40
-
-      - name: Runner status
-        id: status
-        run: |
-          echo "Runner label:" ${{ steps.start-ec2-runner.outputs.label }}
-          echo "EC2 instances id:" ${{ steps.start-ec2-runner.outputs.ec2-instance-id }}
-
-  http-e2e-update:
-    name: 'ec2 update attribute for http test'
-    needs: [start-runner-http]
-    runs-on: ${{ needs.start-runner-http.outputs.label }}
-    steps:
-      - name: set timeout
-        run: |
-          aws ec2 modify-instance-attribute --instance-initiated-shutdown-behavior terminate --instance-id ${{ needs.start-runner-http.outputs.ec2-instance-id }}
-
-  http-e2e-tests:
-    name: 'http-e2e test'
-    needs: [http-e2e-update, start-runner-http]
-    runs-on: ${{ needs.start-runner-http.outputs.label }}
-    container:
-      image: onthertech/thanos-ci-builder:latest
-    steps:
-      - name: Check CPUs
-        run: lscpu
-
-      - name: Checkout
-        uses: actions/checkout@v4.1.0
-
-      - name: Add repository to git safe directories
-        run: git config --global --add safe.directory $GITHUB_WORKSPACE
-
-      - name: Restore Node Modules
-        uses: actions/cache@v3.3.2
-        with:
-          key: pnpm-packages-v2-{{ checksum "pnpm-lock.yaml" }}
-          path: node_modules
-          restore-keys: pnpm-packages-v2-{{ checksum "pnpm-lock.yaml" }}
-
-      - name: Fetch dependencies
-        run: pnpm fetch --frozen-lockfile --prefer-offline
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile --offline
-
-      - name: Print forge version
-        run: forge --version
-        working-directory: packages/tokamak/contracts-bedrock
-
-      - name: Build
-        run: make build
-
-      - name: Setup e2e test
-        run: |
-          make cannon-prestate
-          DEPLOYMENT_CONTEXT=devnetL1 make devnet-allocs
-
-      - name: Run e2e http test
-        run: OP_E2E_USE_HTTP=true OP_TESTLOG_DISABLE_COLOR=true OP_E2E_DISABLE_PARALLEL=false gotestsum --format=standard-verbose -- -timeout=25m -parallel=16 ./...
-        working-directory: op-e2e
-
-  stop-runner-http:
-    name: Stop self-hosted EC2 runner for http tests
-    needs: [start-runner-http, http-e2e-tests]
-    runs-on: ubuntu-latest
-    if: ${{ always() }} # required to stop the runner even if the error happened in the previous jobs
-    steps:
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-northeast-2
-
-      - name: Stop EC2 runner
-        uses: machulav/ec2-github-runner@v2
-        with:
-          mode: stop
-          github-token: ${{ secrets.ACCESS_TOKEN }}
-          label: ${{ needs.start-runner-http.outputs.label }}
-          ec2-instance-id: ${{ needs.start-runner-http.outputs.ec2-instance-id }}
