--- a/packages/tokamak/contracts-bedrock/package.json
+++ b/packages/tokamak/contracts-bedrock/package.json
@@ -59,11 +59,12 @@
     "@eth-optimism/contracts-bedrock": "workspace:*",
     "@nomicfoundation/hardhat-verify": "^2.0.7",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
+    "@nomiclabs/hardhat-etherscan": "^3.1.8",
     "@nomiclabs/hardhat-waffle": "^2.0.6",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "ethers": "^5.7.2",
-    "hardhat": "2.22.3",
+    "hardhat": "2.22.4",
     "tsx": "^3.14.0",
     "typescript": "^5.2.2"
   }
