--- a/packages/tokamak/contracts-bedrock/tsconfig.json
+++ b/packages/tokamak/contracts-bedrock/tsconfig.json
@@ -4,8 +4,8 @@
     "outDir": "./dist"
   },
   "include": [
-    "deploy-config/**/*",
-    "deploy-config/**/*.json",
-    "scripts/**/*"
+    "deploy-config/*.json",
+    "scripts/**/*",
+    "*.ts"
   ]
 }
