--- a/.github/workflows/release-docker-release.yml
+++ b/.github/workflows/release-docker-release.yml
@@ -168,7 +168,7 @@ jobs:
           mode: start
           github-token: ${{ secrets.ACCESS_TOKEN }}
           ec2-image-id: ami-0ceeb1418a9676af7
-          ec2-instance-type: t4g.2xlarge
+          ec2-instance-type: m7g.2xlarge
           subnet-id: subnet-04958ddab1cb88c55
           security-group-id: sg-031082ccee7540e7a
           iam-role-name: ec2-runner
