Fix minor error

--- a/op-bindings/Makefile
+++ b/op-bindings/Makefile
@@ -3,7 +3,7 @@ monorepo-base := $(shell dirname $(realpath .))
 contracts-dir := $(monorepo-base)/packages/tokamak/contracts-bedrock
 contracts-list := ./artifacts.json
 contracts-hardhat-list := ./artifacts-hardhat.json
-log-level := debug
+log-level := info
 ETHERSCAN_APIKEY_ETH ?=
 ETHERSCAN_APIKEY_OP ?=
 RPC_URL_ETH ?=
