add update hard fork time and reset to l1 genesis

--- a/ops-bedrock/vars.env
+++ b/ops-bedrock/vars.env
@@ -3,7 +3,7 @@ GETH_BINARY=geth
 EL_BOOTNODE_BINARY=bootnode
 
 # Base directories for the validator keys and secrets
-DATADIR=/beacon_data/local_testnet
+DATADIR=/beacon_data
 
 # Directory for the eth2 config
 TESTNET_DIR=$DATADIR/testnet
