--- a/ops-bedrock/docker-compose.yml
+++ b/ops-bedrock/docker-compose.yml
@@ -21,37 +21,16 @@ services:
     image: onthertech/thanos-op-stack-go:${IMAGE_TAG:-latest}
     entrypoint: ["echo", "build complete"]
 
-  l1:
-    build:
-      context: .
-      dockerfile: ${L1_DOCKER_FILE:-Dockerfile.l1}
-    ports:
-      - "8545:8545"
-      - "8546:8546"
-      - "7060:6060"
-      - "9999:9999"
-      - "5001:5001"
-    volumes:
-      - "l1_data:/db"
-      - "${PWD}/../.devnet/genesis-l1.json:/genesis.json"
-      - "${PWD}/test-jwt-secret.txt:/config/test-jwt-secret.txt"
-    environment:
-      GETH_MINER_RECOMMIT: 100ms
-      BLOCK_NUMBER: ${BLOCK_NUMBER}
-      L1_RPC: ${L1_RPC}
-
   setup:
-    depends_on:
-      - l1
-      - op-node
     build:
       context: .
       dockerfile: Dockerfile.setup
     volumes:
       - "beacon_data:/beacon_data"
-      - "${PWD}/ops-bedrock/bin:/usr/local/bin"
-      - "${PWD}/.devnet/genesis-l1.json:/genesis-l1.json"
-      - "${PWD}/.devnet/rollup.json:/rollup.json"
+      - "./bin:/usr/local/bin"
+      - "./../.devnet/genesis-l1.json:/genesis-l1.json"
+      - "./../.devnet/rollup.json:/rollup.json"
+      - "./setup_time.sh:/setup_time.sh"
 
   bootnode:
     depends_on:
@@ -63,22 +42,39 @@ services:
       - "4242:4242"
     volumes:
       - "beacon_data:/beacon_data"
-      - "${PWD}/ops-bedrock/bin:/usr/local/bin"
+      - "./bin:/usr/local/bin"
+
+  l1:
+    build:
+      context: .
+      dockerfile: ${L1_DOCKER_FILE:-Dockerfile.l1}
+    ports:
+      - "8545:8545"
+      - "8546:8546"
+      - "7060:6060"
+      - "9999:9999"
+      - "7001:7001"
+      - "8551:8551"
+    volumes:
+      - "l1_data:/db"
+      - "./../.devnet/genesis-l1.json:/genesis.json"
+      - "./test-jwt-secret.txt:/config/test-jwt-secret.txt"
+    environment:
+      GETH_MINER_RECOMMIT: 100ms
+      BLOCK_NUMBER: ${BLOCK_NUMBER}
+      L1_RPC: ${L1_RPC}
 
   consensus-node:
     depends_on:
       - l1
-    build:
-      context: .
-      dockerfile: Dockerfile.lighthouse
     image: sigp/lighthouse:${IMAGE_TAG:-latest}
     command: >
       /bin/sh -c "lighthouse
       --debug-level=info \
       bn \
       --allow-insecure-genesis-sync \
-      --datadir=/beacon_data \
-      --enable-private-discovery \
+      --datadir=/beacon_data/node_1 \
+      --testnet-dir=/beacon_data/testnet \
       --staking \
       --enr-address=127.0.0.1 \
       --enr-udp-port=9001 \
@@ -89,32 +85,29 @@ services:
       --http-port=8001 \
       --disable-packet-filter \
       --target-peers=1 \
-      --execution-endpoint=http://l1:5001 \
+      --execution-endpoint=http://l1:8551 \
       --execution-jwt=/config/test-jwt-secret.txt \
       --http-allow-sync-stalled"
     ports:
       - "9001:9001"
-      - "9101:9101"
       - "8001:8001"
     volumes:
-      - beacon_data:/beacon_data
-      - "${PWD}/test-jwt-secret.txt:/config/test-jwt-secret.txt"
+      - "beacon_data:/beacon_data"
+      - "./test-jwt-secret.txt:/config/test-jwt-secret.txt"
 
   validator-client:
-    build:
-      context: .
-      dockerfile: Dockerfile.lighthouse
     image: sigp/lighthouse:${IMAGE_TAG:-latest}
     command: >
       /bin/sh -c "lighthouse
       --debug-level info \
       vc \
-      --datadir /beacon_data \
+      --datadir /beacon_data/node_1 \
+      --testnet-dir /beacon_data/testnet \
       --init-slashing-protection \
       --beacon-nodes http://consensus-node:8001
       --suggested-fee-recipient 0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
     volumes:
-      - beacon_data:/beacon_data
+      - "beacon_data:/beacon_data"
 
   l2:
     build:
@@ -128,8 +121,8 @@ services:
       - "8551:8551"
     volumes:
       - "l2_data:/db"
-      - "${PWD}/../.devnet/genesis-l2.json:/genesis.json"
-      - "${PWD}/test-jwt-secret.txt:/config/test-jwt-secret.txt"
+      - "./../.devnet/genesis-l2.json:/genesis.json"
+      - "./test-jwt-secret.txt:/config/test-jwt-secret.txt"
     entrypoint:  # pass the L2 specific flags by overriding the entry-point and adding extra arguments
       - "/bin/sh"
       - "/entrypoint.sh"
@@ -181,10 +174,10 @@ services:
       - "7300:7300"
       - "6060:6060"
     volumes:
-      - "${PWD}/p2p-sequencer-key.txt:/config/p2p-sequencer-key.txt"
-      - "${PWD}/p2p-node-key.txt:/config/p2p-node-key.txt"
-      - "${PWD}/test-jwt-secret.txt:/config/test-jwt-secret.txt"
-      - "${PWD}/../.devnet/rollup.json:/rollup.json"
+      - "./p2p-sequencer-key.txt:/config/p2p-sequencer-key.txt"
+      - "./p2p-node-key.txt:/config/p2p-node-key.txt"
+      - "./test-jwt-secret.txt:/config/test-jwt-secret.txt"
+      - "./../.devnet/rollup.json:/rollup.json"
       - op_log:/op_log
     environment:
       L1_FORK_PUBLIC_NETWORK: "${L1_FORK_PUBLIC_NETWORK}"
@@ -297,6 +290,6 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - "${PWD}/../.devnet/:/usr/share/nginx/html/:ro"
+      - "./../.devnet/:/usr/share/nginx/html/:ro"
     security_opt:
       - "no-new-privileges:true"
