--- a/op-bindings/Makefile
+++ b/op-bindings/Makefile
@@ -69,6 +69,7 @@ hardhat-bindings:
 	./gen_bindings.sh $(contracts-dir)/hardhat-artifacts/v3-periphery/TickLens.sol/TickLens.json $(pkg)
 	./gen_bindings.sh $(contracts-dir)/hardhat-artifacts/v3-periphery/UniswapInterfaceMulticall.sol/UniswapInterfaceMulticall.json $(pkg)
 	./gen_bindings.sh $(contracts-dir)/hardhat-artifacts/universal-router/UniversalRouter.sol/UniversalRouter.json $(pkg)
+	./gen_bindings.sh $(contracts-dir)/hardhat-artifacts/universal-router/UnsupportedProtocol.sol/UnsupportedProtocol.json $(pkg)
 
 mkdir:
 	mkdir -p $(pkg)
