--- a/ops-bedrock/Dockerfile.setup
+++ b/ops-bedrock/Dockerfile.setup
@@ -6,31 +6,24 @@ RUN apt-get update && apt-get install -y \
     curl \
     gnupg2 \
     lsb-release \
-    software-properties-common
+    software-properties-common \
+    jq
 
 # Install Lighthouse dependencies
-RUN apt-get install -y build-essential clang cmake libssl-dev pkg-config git jq
+RUN apt-get install -y build-essential clang cmake libssl-dev pkg-config git
 
-# Download pre-built Lighthouse binary
-# RUN wget https://github.com/sigp/lighthouse/releases/download/v5.1.3/lighthouse-v5.1.3-x86_64-unknown-linux-gnu.tar.gz \
-#     && tar -xzf lighthouse-v5.1.3-x86_64-unknown-linux-gnu.tar.gz \
-#     && sudo mv lighthouse /usr/local/bin/lighthouse \
-#     && rm lighthouse-v5.1.3-x86_64-unknown-linux-gnu.tar.gz
+# Clone Lighthouse repository and build
+RUN git clone https://github.com/sigp/lighthouse.git \
+    && cd /lighthouse \
+    && git checkout v5.1.3 \
+    && make install-lcli
 
 # copy files
 COPY entrypoint-setup.sh /entrypoint.sh
 COPY vars.env /vars.env
-COPY bin/lcli /usr/local/bin/lcli
-# test
-# COPY tests/rollup.json /rollup.json
-# COPY tests/genesis-l1.json /genesis.json
 
 # change permission
 RUN chmod +x /entrypoint.sh
-RUN chmod +x /usr/local/bin/lcli
 
-# # Create directories for testnet
-# RUN mkdir -p /beacon_data/local_testnet/testnet
-
-# 스크립트 실행
+# entrypoint
 ENTRYPOINT ["/bin/bash", "/entrypoint.sh"]
