--- a/.github/workflows/slither-check.yml
+++ b/.github/workflows/slither-check.yml
@@ -27,7 +27,7 @@ jobs:
       # Copy necessary tools from Docker container
       - name: Copy foundry from Docker container
         run: |
-          container_id=$(docker create onthertech/thanos-ci-builder:ecotone)
+          container_id=$(docker create tokamaknetwork/thanos-ci-builder:latest)
           mkdir -p $HOME/bin
           docker cp $container_id:/usr/local/bin/cast $HOME/bin/
           docker cp $container_id:/usr/local/bin/anvil $HOME/bin/
