--- a/ops-bedrock/docker-compose.yml
+++ b/ops-bedrock/docker-compose.yml
@@ -9,31 +9,30 @@ volumes:
   l2_data:
   op_log:
 
-
 services:
-  op_stack_go_builder:  # Not an actual service, but builds the prerequisite go images
+  op_stack_go_builder: # Not an actual service, but builds the prerequisite go images
     build:
       context: ../
       dockerfile: ops/docker/op-stack-go/Dockerfile
       args:
-        GIT_COMMIT: "dev"
-        GIT_DATE: "0"
-    image: onthertech/thanos-op-stack-go:${IMAGE_TAG:-latest}
-    entrypoint: ["echo", "build complete"]
+        GIT_COMMIT: 'dev'
+        GIT_DATE: '0'
+    image: tokamaknetwork/thanos-op-stack-go:${IMAGE_TAG:-latest}
+    entrypoint: ['echo', 'build complete']
 
   l1:
     build:
       context: .
       dockerfile: ${L1_DOCKER_FILE:-Dockerfile.l1}
     ports:
-      - "8545:8545"
-      - "8546:8546"
-      - "7060:6060"
-      - "9999:9999"
+      - '8545:8545'
+      - '8546:8546'
+      - '7060:6060'
+      - '9999:9999'
     volumes:
-      - "l1_data:/db"
-      - "${PWD}/../.devnet/genesis-l1.json:/genesis.json"
-      - "${PWD}/test-jwt-secret.txt:/config/test-jwt-secret.txt"
+      - 'l1_data:/db'
+      - '${PWD}/../.devnet/genesis-l1.json:/genesis.json'
+      - '${PWD}/test-jwt-secret.txt:/config/test-jwt-secret.txt'
     environment:
       GETH_MINER_RECOMMIT: 100ms
       BLOCK_NUMBER: ${BLOCK_NUMBER}
@@ -46,17 +45,17 @@ services:
       args:
         L2_IMAGE: ${L2_IMAGE}
     ports:
-      - "9545:8545"
-      - "8060:6060"
-      - "8551:8551"
+      - '9545:8545'
+      - '8060:6060'
+      - '8551:8551'
     volumes:
-      - "l2_data:/db"
-      - "${PWD}/../.devnet/genesis-l2.json:/genesis.json"
-      - "${PWD}/test-jwt-secret.txt:/config/test-jwt-secret.txt"
-    entrypoint:  # pass the L2 specific flags by overriding the entry-point and adding extra arguments
-      - "/bin/sh"
-      - "/entrypoint.sh"
-      - "--authrpc.jwtsecret=/config/test-jwt-secret.txt"
+      - 'l2_data:/db'
+      - '${PWD}/../.devnet/genesis-l2.json:/genesis.json'
+      - '${PWD}/test-jwt-secret.txt:/config/test-jwt-secret.txt'
+    entrypoint: # pass the L2 specific flags by overriding the entry-point and adding extra arguments
+      - '/bin/sh'
+      - '/entrypoint.sh'
+      - '--authrpc.jwtsecret=/config/test-jwt-secret.txt'
     environment:
       GETH_MINER_RECOMMIT: 100ms
 
@@ -69,8 +68,8 @@ services:
       context: ../
       dockerfile: ./op-node/Dockerfile
       args:
-        OP_STACK_GO_BUILDER: onthertech/thanos-op-stack-go:${IMAGE_TAG:-latest}
-    image: onthertech/thanos-op-node:${IMAGE_TAG:-latest}
+        OP_STACK_GO_BUILDER: tokamaknetwork/thanos-op-stack-go:${IMAGE_TAG:-latest}
+    image: tokamaknetwork/thanos-op-node:${IMAGE_TAG:-latest}
     command: >
       /bin/sh -c "while ! nc -z l1 ${WAITING_L1_PORT:-8545}; do sleep 1; done; echo 'Port is now available' &&
       op-node
@@ -100,19 +99,19 @@ services:
       --l1.beacon=${L1_BEACON}
       --l1.trustrpc"
     ports:
-      - "7545:8545"
-      - "9003:9003"
-      - "7300:7300"
-      - "6060:6060"
+      - '7545:8545'
+      - '9003:9003'
+      - '7300:7300'
+      - '6060:6060'
     volumes:
-      - "${PWD}/p2p-sequencer-key.txt:/config/p2p-sequencer-key.txt"
-      - "${PWD}/p2p-node-key.txt:/config/p2p-node-key.txt"
-      - "${PWD}/test-jwt-secret.txt:/config/test-jwt-secret.txt"
-      - "${PWD}/../.devnet/rollup.json:/rollup.json"
+      - '${PWD}/p2p-sequencer-key.txt:/config/p2p-sequencer-key.txt'
+      - '${PWD}/p2p-node-key.txt:/config/p2p-node-key.txt'
+      - '${PWD}/test-jwt-secret.txt:/config/test-jwt-secret.txt'
+      - '${PWD}/../.devnet/rollup.json:/rollup.json'
       - op_log:/op_log
     environment:
-      L1_FORK_PUBLIC_NETWORK: "${L1_FORK_PUBLIC_NETWORK}"
-      WAITING_L1_PORT: "${WAITING_L1_PORT}"
+      L1_FORK_PUBLIC_NETWORK: '${L1_FORK_PUBLIC_NETWORK}'
+      WAITING_L1_PORT: '${WAITING_L1_PORT}'
 
   op-proposer:
     depends_on:
@@ -124,12 +123,12 @@ services:
       context: ../
       dockerfile: ./op-proposer/Dockerfile
       args:
-        OP_STACK_GO_BUILDER: onthertech/thanos-op-stack-go:${IMAGE_TAG:-latest}
-    image: onthertech/thanos-op-proposer:${IMAGE_TAG:-latest}
+        OP_STACK_GO_BUILDER: tokamaknetwork/thanos-op-stack-go:${IMAGE_TAG:-latest}
+    image: tokamaknetwork/thanos-op-proposer:${IMAGE_TAG:-latest}
     ports:
-      - "6062:6060"
-      - "7302:7300"
-      - "6546:8545"
+      - '6062:6060'
+      - '7302:7300'
+      - '6546:8545'
     command: >
       /bin/sh -c "while ! nc -z op-node 8545 ; do sleep 1; done; echo 'op-node is now available' && op-proposer"
     environment:
@@ -139,14 +138,14 @@ services:
       OP_PROPOSER_NUM_CONFIRMATIONS: 1
       OP_PROPOSER_MNEMONIC: test test test test test test test test test test test junk
       OP_PROPOSER_L2_OUTPUT_HD_PATH: "m/44'/60'/0'/0/1"
-      OP_PROPOSER_L2OO_ADDRESS: "${L2OO_ADDRESS}"
-      OP_PROPOSER_GAME_FACTORY_ADDRESS: "${DGF_ADDRESS}"
-      OP_PROPOSER_GAME_TYPE: "${DG_TYPE}"
-      OP_PROPOSER_PROPOSAL_INTERVAL: "${PROPOSAL_INTERVAL}"
-      OP_PROPOSER_PPROF_ENABLED: "true"
-      OP_PROPOSER_METRICS_ENABLED: "true"
-      OP_PROPOSER_ALLOW_NON_FINALIZED: "true"
-      OP_PROPOSER_RPC_ENABLE_ADMIN: "true"
+      OP_PROPOSER_L2OO_ADDRESS: '${L2OO_ADDRESS}'
+      OP_PROPOSER_GAME_FACTORY_ADDRESS: '${DGF_ADDRESS}'
+      OP_PROPOSER_GAME_TYPE: '${DG_TYPE}'
+      OP_PROPOSER_PROPOSAL_INTERVAL: '${PROPOSAL_INTERVAL}'
+      OP_PROPOSER_PPROF_ENABLED: 'true'
+      OP_PROPOSER_METRICS_ENABLED: 'true'
+      OP_PROPOSER_ALLOW_NON_FINALIZED: 'true'
+      OP_PROPOSER_RPC_ENABLE_ADMIN: 'true'
 
   op-batcher:
     depends_on:
@@ -158,12 +157,12 @@ services:
       context: ../
       dockerfile: ./op-batcher/Dockerfile
       args:
-        OP_STACK_GO_BUILDER: onthertech/thanos-op-stack-go:${IMAGE_TAG:-latest}
-    image: onthertech/thanos-op-batcher:${IMAGE_TAG:-latest}
+        OP_STACK_GO_BUILDER: tokamaknetwork/thanos-op-stack-go:${IMAGE_TAG:-latest}
+    image: tokamaknetwork/thanos-op-batcher:${IMAGE_TAG:-latest}
     ports:
-      - "6061:6060"
-      - "7301:7300"
-      - "6545:8545"
+      - '6061:6060'
+      - '7301:7300'
+      - '6545:8545'
     command: >
       /bin/sh -c "while ! nc -z op-node 8545 ; do sleep 1; done; echo 'op-node is now available' && op-batcher"
     environment:
@@ -176,9 +175,9 @@ services:
       OP_BATCHER_NUM_CONFIRMATIONS: 1
       OP_BATCHER_MNEMONIC: test test test test test test test test test test test junk
       OP_BATCHER_SEQUENCER_HD_PATH: "m/44'/60'/0'/0/2"
-      OP_BATCHER_PPROF_ENABLED: "true"
-      OP_BATCHER_METRICS_ENABLED: "true"
-      OP_BATCHER_RPC_ENABLE_ADMIN: "true"
+      OP_BATCHER_PPROF_ENABLED: 'true'
+      OP_BATCHER_METRICS_ENABLED: 'true'
+      OP_BATCHER_RPC_ENABLE_ADMIN: 'true'
       OP_BATCHER_BATCH_TYPE: 0
 
   op-challenger:
@@ -191,12 +190,12 @@ services:
       context: ../
       dockerfile: ./op-challenger/Dockerfile
       args:
-        OP_STACK_GO_BUILDER: onthertech/thanos-op-stack-go:${IMAGE_TAG:-latest}
+        OP_STACK_GO_BUILDER: tokamaknetwork/thanos-op-stack-go:${IMAGE_TAG:-latest}
     image: us-docker.pkg.dev/oplabs-tools-artifacts/images/op-challenger:devnet
     environment:
       OP_CHALLENGER_L1_ETH_RPC: http://l1:8545
       # Note: this will need to be updated to point to a L1 consensus node when there is one in the devnet
-      OP_CHALLENGER_L1_BEACON: "unset"
+      OP_CHALLENGER_L1_BEACON: 'unset'
       OP_CHALLENGER_ROLLUP_RPC: http://op-node:8545
       OP_CHALLENGER_TRACE_TYPE: cannon
       OP_CHALLENGER_GAME_FACTORY_ADDRESS: ${DGF_ADDRESS}
@@ -219,8 +218,8 @@ services:
       - l1
     image: nginx:1.25-alpine
     ports:
-      - "8080:80"
+      - '8080:80'
     volumes:
-      - "${PWD}/../.devnet/:/usr/share/nginx/html/:ro"
+      - '${PWD}/../.devnet/:/usr/share/nginx/html/:ro'
     security_opt:
-      - "no-new-privileges:true"
+      - 'no-new-privileges:true'
