restore path of usdc bridge

--- a/packages/tokamak/contracts-bedrock/foundry.toml
+++ b/packages/tokamak/contracts-bedrock/foundry.toml
@@ -29,7 +29,7 @@ bytecode_hash = 'none'
 build_info = true
 build_info_path = 'artifacts/build-info'
 
-libraries = ["src/USDC/L2/tokamak-USDC/v2/FiatTokenV2_2.sol:SignatureChecker:0x4200000000000000000000000000000000000776"]
+libraries = ["src/tokamak-contracts/USDC/L2/tokamak-USDC/v2/FiatTokenV2_2.sol:SignatureChecker:0x4200000000000000000000000000000000000776"]
 
 # Test / Script Runner Settings
 ffi = true
@@ -55,7 +55,7 @@ line_length=120
 multiline_func_header='all'
 bracket_spacing=true
 wrap_comments=true
-ignore = ['src/vendor/WNativeToken.sol', 'src/USDC/**/*.sol']
+ignore = ['src/vendor/WNativeToken.sol', 'src/tokamak-contracts/**/*.sol']
 
 ################################################################
 #                         PROFILE: CI                          #
